--- a/assets/css/error404.css
+++ b/assets/css/error404.css
@@ -1,6 +1,6 @@
 .not-found{padding:var(--padding-not-found);}
 .not-found--icon:before,
-.not-found--icon:after{position:absolute; content:''; width:25px; height:1px; background-color:var(--wp--preset--color--title); top:50%; left:50%; transform:translate(-50%, -50%);}
-.not-found--icon:before{transform:rotate(45deg);}
-.not-found--icon:after{transform:rotate(-45deg);}
-.not-found--icon{position:relative; width:50px; height:50px; background-color:var(--wp--preset--color--line);}
+.not-found--icon:after{position:absolute; content:''; width:25px; height:1px; background-color:var(--wp--preset--color--title); top:50%; left:50%;}
+.not-found--icon:before{transform:rotate(45deg) translate(-50%, -50%);}
+.not-found--icon:after{transform:rotate(-45deg) translate(-50%, -50%);}
+.not-found--icon{position:relative; width:50px; height:50px; background-color:var(--wp--preset--color--line); border-radius:50%;}
