--- a/assets/css/error404.css
+++ b/assets/css/error404.css
@@ -1,6 +1,8 @@
 .not-found{padding:var(--padding-not-found);}
 .not-found--icon:before,
-.not-found--icon:after{position:absolute; content:''; width:20px; height:1px; background-color:var(--wp--preset--color--title); top:50%; left:50%;}
+.not-found--icon:after{position:absolute; content:''; width:20px; height:2px; background-color:var(--wp--preset--color--title); top:50%; left:50%;}
 .not-found--icon:before{transform:translate(-50%, -50%) rotate(45deg);}
 .not-found--icon:after{transform:translate(-50%, -50%) rotate(-45deg);}
 .not-found--icon{position:relative; width:50px; height:50px; background-color:var(--wp--preset--color--line); border-radius:50%; margin-inline:auto;}
+.not-found h2{text-align:center; margin-top:14px;}
+.not-found p{max-width:330px; margin:18px auto 20px; text-align:center;}
