--- a/assets/css/error404.css
+++ b/assets/css/error404.css
@@ -5,4 +5,5 @@
 .not-found--icon:after{transform:translate(-50%, -50%) rotate(-45deg);}
 .not-found--icon{position:relative; width:50px; height:50px; background-color:var(--wp--preset--color--line); border-radius:50%; margin-inline:auto;}
 .not-found h2{text-align:center; margin-top:14px;}
-.not-found p{max-width:330px; margin:18px auto 20px; text-align:center;}
+.not-found p{max-width:330px; margin:18px auto 20px; text-align:center; font-size:14px;}
+.not-found a{background-color:var(--wp--preset--color--title); color:#fff; padding:9px 15px 10px; text-align:center;}
