--- a/assets/css/error404.css
+++ b/assets/css/error404.css
@@ -1,5 +1,5 @@
-#body{display:grid; min-height:100vh; align-content:flex-start; grid-template-rows:auto 1fr auto;}
-.not-found{padding:var(--padding-not-found); text-align:center;}
+#body{display:grid; min-height:100vh; align-content:flex-start; grid-template-rows:auto 1fr auto; background-color:var(--wp--preset--color--line);}
+.not-found{padding:var(--padding-not-found); text-align:center; background-color:var(--wp--preset--color--background);}
 .not-found--icon:before,
 .not-found--icon:after{position:absolute; content:''; width:20px; height:2px; background-color:var(--wp--preset--color--title); top:50%; left:50%;}
 .not-found--icon:before{transform:translate(-50%, -50%) rotate(45deg);}
