--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -7,3 +7,4 @@
 .contact-page .info-and-contact--wrapper :is(.info, .contact) div *:not(:last-child, p, input){margin-bottom:20px;}
 .contact-page .info-and-contact--wrapper .contact .wpcf7-form{display:grid; gap:19px;}
 .contact-page .info-and-contact--wrapper .contact .wpcf7-form :is(input[type=text], input[type=email], textarea){width:100%;}
+.contact-page .info-and-contact--wrapper .contact .wpcf7-form p:nth-child(4){grid-column:1/-1;}
