--- a/style.css
+++ b/style.css
@@ -110,4 +110,4 @@ img{display:block; height:auto;}
             #main-footer .social ul li a[href*="facebook"]:before{padding:9px 5px;}
 
 /* panel carrito */
-#cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:-100%; width:auto; height:100svh;}
+#cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:-100%; max-width:360px; height:100svh; overflow:hidden; z-index:2;}
