--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ Tags:
 html{scroll-behavior:smooth;}
 *, :before, :after{box-sizing:border-box; margin:0;}
 body{position:relative; overflow:hidden;}
-main{transition:all .3s ease;}
+main{background-color:var(--wp--preset--color--background); transition:all .3s ease;}
 :is(header,footer,aside,.resume-content) :is(ol,ul){padding:0; list-style:none;}
 a{transition:all .3s ease; border-radius:.2rem;}
 a:focus{outline:none; box-shadow:var(--wp--preset--color--links);}
