--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -34,8 +34,9 @@
 
 /* información meta */
 .meta-wrapper{padding:20px 0 18px; border-top:1px solid #e0e0e0; border-bottom:1px solid #e0e0e0; text-align:center; font-size:14px;}
+.meta-wrapper .section .product_meta{display:grid;}
 .meta-wrapper .section .product_meta > span:not(:last-child){margin-right:14px;}
-.meta-wrapper .section .product_meta span{color:var(--wp--preset--color--title);}
+.meta-wrapper .section .product_meta span{color:var(--wp--preset--color--title); line-height:2;}
 .meta-wrapper .section .product_meta span :is(span, a){color:var(--wp--preset--color--text);}
 .meta-wrapper .section .product_meta span a:hover{color:var(--wp--preset--color--links);}
 
