--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -33,8 +33,8 @@
     #comments .woocommerce-Reviews-title{display:none;}
 
 /* información meta */
-.meta-wrapper{padding:20px 0 18px; border-top:1px solid #e0e0e0; border-bottom:1px solid #e0e0e0; text-align:center; font-size:14px;}
-.meta-wrapper .section .product_meta{display:grid;}
+.meta-wrapper{padding:20px 0 18px; border-top:1px solid #e0e0e0; border-bottom:1px solid #e0e0e0; text-align:var(--text-align--meta); font-size:14px;}
+.meta-wrapper .section .product_meta{display:var(--display--product-meta);}
 .meta-wrapper .section .product_meta > span:not(:last-child){margin-right:14px;}
 .meta-wrapper .section .product_meta span{color:var(--wp--preset--color--title); line-height:2;}
 .meta-wrapper .section .product_meta span :is(span, a){color:var(--wp--preset--color--text);}
