--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -42,12 +42,14 @@
     .product .summary .shop_attributes tr th,.product .summary .shop_attributes tr td{font-size:inherit; padding-bottom:12px;}
     .product .summary .shop_attributes tr:last-child th,.product .summary .shop_attributes tr:last-child td{padding-bottom:0;}
     /* pestaña valoraciones */
+    .commentlist li .comment_container{position:relative;}
     .commentlist li .comment_container .comment-text{text-align:left; font-size:16px;}
+    .commentlist li .comment_container .comment-text .star-rating{position:absolute; top:0; right:0;}
     .commentlist li .comment_container .comment-text .meta{display:grid;}
-    .commentlist li .comment_container .comment-text .meta .woocommerce-review__author{color:var(--wp--preset--color--title); font-size:18px;}
+    .commentlist li .comment_container .comment-text .meta .woocommerce-review__author{color:var(--wp--preset--color--title); font-size:18px; font-weight:400;}
     .commentlist li .comment_container .comment-text .meta .woocommerce-review__dash{display:none;}
     .commentlist li .comment_container .comment-text .meta .woocommerce-review__published-date{color:var(--wp--preset--color--text);}
-    .commentlist li .comment_container .comment-text .description{padding-top:19px; color:var(--wp--preset--color--text);}
+    .commentlist li .comment_container .comment-text .description{padding-top:19px; color:var(--wp--preset--color--text); font-size:14px;}
 
 /* información meta */
 .meta-wrapper{padding:20px 0 18px; border-top:1px solid #e0e0e0; border-bottom:1px solid #e0e0e0; text-align:var(--text-align--meta); font-size:14px;}
