--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -27,10 +27,7 @@
 .woocommerce-Tabs-panel{padding:var(--padding--tabs-panel);}
 .woocommerce-Tabs-panel > *:not(:last-child){margin-bottom:24px;}
 .woocommerce-Tabs-panel > :is(ol, ul){padding-left:15px;}
-.woocommerce-Tabs-panel--description{width:var(--width--tab-description); margin-inline:auto;}
-    /* pestaña valoraciones */
-    #tab-title-reviews a span{position:relative; top:-7px; font-size:14px; color:var(--wp--preset--color--links);}
-    #comments .woocommerce-Reviews-title{display:none;}
+.woocommerce-Tabs-panel--description{width:var(--width--tab-description); margin-inline:auto;}  
     /* pestaña informqción adicional */
     .shop_attributes {width:100%;}
     .shop_attributes tr th,.shop_attributes tr td{font-size:16px; line-height:1.6; padding-bottom:19px; text-align:left; font-weight:400;}
@@ -41,6 +38,8 @@
     .product .summary .shop_attributes tr th,.product .summary .shop_attributes tr td{font-size:inherit; padding-bottom:12px;}
     .product .summary .shop_attributes tr:last-child th,.product .summary .shop_attributes tr:last-child td{padding-bottom:0;}
     /* pestaña valoraciones */
+    #tab-title-reviews a span{position:relative; top:-7px; font-size:14px; color:var(--wp--preset--color--links);}
+    #comments .woocommerce-Reviews-title{display:none;}
     .commentlist,
     #review_form_wrapper{width:min(100%, 802px); margin-inline:auto;}
     .commentlist li:not(:first-child){border-top:none;}
@@ -54,7 +53,7 @@
     .commentlist li .comment_container .comment-text .meta .woocommerce-review__dash{display:none;}
     .commentlist li .comment_container .comment-text .meta .woocommerce-review__published-date{color:var(--wp--preset--color--text); font-size:var(--font-size--review--published-date);}
     .commentlist li .comment_container .comment-text .description{padding-top:19px; color:var(--wp--preset--color--text); font-size:var(--font-size--review--description);}
-
+    #reply-title{font-size:24px; padding-bottom:34px;}
 /* información meta */
 .meta-wrapper{padding:20px 0 18px; border-top:1px solid #e0e0e0; border-bottom:1px solid #e0e0e0; text-align:var(--text-align--meta); font-size:14px;}
 .meta-wrapper .section .product_meta{display:var(--display--product-meta);}
