--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -54,7 +54,8 @@
     .commentlist li .comment_container .comment-text .meta .woocommerce-review__dash{display:none;}
     .commentlist li .comment_container .comment-text .meta .woocommerce-review__published-date{color:var(--wp--preset--color--text); font-size:var(--font-size--review--published-date);}
     .commentlist li .comment_container .comment-text .description{padding-top:19px; color:var(--wp--preset--color--text); font-size:var(--font-size--review--description);}
-    #reply-title{font-size:24px; padding-bottom:34px;}
+    #reply-title{display:block; font-size:24px; padding-bottom:34px;}
+    .comment-form-rating{display:grid; margin-bottom:16px;}
 /* información meta */
 .meta-wrapper{padding:20px 0 18px; border-top:1px solid #e0e0e0; border-bottom:1px solid #e0e0e0; text-align:var(--text-align--meta); font-size:14px;}
 .meta-wrapper .section .product_meta{display:var(--display--product-meta);}
