--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -54,6 +54,7 @@
     .commentlist li .comment_container .comment-text .meta .woocommerce-review__dash{display:none;}
     .commentlist li .comment_container .comment-text .meta .woocommerce-review__published-date{color:var(--wp--preset--color--text); font-size:var(--font-size--review--published-date);}
     .commentlist li .comment_container .comment-text .description{padding-top:19px; color:var(--wp--preset--color--text); font-size:var(--font-size--review--description);}
+    #respond{padding-top:0;}
     #reply-title{display:block; font-size:24px; padding-bottom:34px;}
     .comment-form-rating{display:grid; margin-bottom:25px;}
     .comment-form-rating label{color:var(--wp--preset--color--text);}
