--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -22,7 +22,7 @@
 /* pestañas */
 .tabs.wc-tabs{padding-left:0; padding-top:18px; list-style:none;}
 .tabs.wc-tabs li{display:flex; align-items:center; height:38.59px;}
-.tabs.wc-tabs li a{color:var(--wp--preset--color--text); border-bottom:1px solid transparent; display:block; width:fit-content; display:flex; align-items:center; height:33px; border-radius:0;}
+.tabs.wc-tabs li a{color:#a1a1a1; border-bottom:1px solid transparent; display:block; width:fit-content; display:flex; align-items:center; height:33px; border-radius:0;}
 .tabs.wc-tabs li.active a{color:var(--wp--preset--color--title); border-bottom-color:#e0e0e0;}
 .woocommerce-Tabs-panel{padding:var(--padding--tabs-panel);}
 .woocommerce-Tabs-panel > *:not(:last-child){margin-bottom:24px;}
@@ -52,7 +52,7 @@
     .commentlist li .comment_container .comment-text .meta{display:grid;}
     .commentlist li .comment_container .comment-text .meta .woocommerce-review__author{color:var(--wp--preset--color--title); font-size:18px; font-weight:400;}
     .commentlist li .comment_container .comment-text .meta .woocommerce-review__dash{display:none;}
-    .commentlist li .comment_container .comment-text .meta .woocommerce-review__published-date{color:var(--wp--preset--color--text); font-size:var(--font-size--review--published-date);}
+    .commentlist li .comment_container .comment-text .meta .woocommerce-review__published-date{color:#a1a1a1; font-size:var(--font-size--review--published-date);}
     .commentlist li .comment_container .comment-text .description{padding-top:19px; color:var(--wp--preset--color--text); font-size:var(--font-size--review--description);}
     #respond{padding-top:0;}
     #reply-title{display:block; font-size:24px; padding-bottom:34px;}
