--- a/assets/css/woocommerce/shop.css
+++ b/assets/css/woocommerce/shop.css
@@ -2,7 +2,7 @@
 .section.breadcrumb-filter-search .header-shop{display:grid; grid-template-columns:1fr auto auto auto; align-items:start;}
 .section.breadcrumb-filter-search .header-shop *{margin:0;}
 .section.breadcrumb-filter-search .filters{max-height:0; overflow:hidden;}
-.section.breadcrumb-filter-search .header-shop .filters-container form{display:var(--categories-list--display);}
+.section.breadcrumb-filter-search .header-shop .filters-container form{display:var(--categories-list--display); align-items:baseline;}
 .section.breadcrumb-filter-search .header-shop .filters-container form .reset-filters{border:0 solid transparent; background-color:transparent; font-size:16px; color:var(--wp--preset--color--text); padding:0; font-size:var(--categories-list-link--font-size);}
 .section.breadcrumb-filter-search .filter-content{display:grid;}
 .section.breadcrumb-filter-search .filter-content .filter-text{display:var(--categories-list--display); padding-left:0; list-style:none;}
