--- a/assets/css/woocommerce/lists.css
+++ b/assets/css/woocommerce/lists.css
@@ -1,14 +1,14 @@
-.products.columns-4{padding-left:0; list-style:none; display:grid; gap:38px 24px; grid-template-columns:var(--grid-columns--loop--woo); padding-bottom:37px;}
-.products.columns-4 li{display:grid; gap:15px;}
-.products.columns-4 li a img{width:100%;}
-.products.columns-4 li .content{position:relative; padding-right:30px;}
-.products.columns-4 li .content *{margin:0; line-height:1.6;}
-.products.columns-4 li .content .title-wrapper .woocommerce-loop-product__title{color:var(--wp--preset--color--text); font-size:16px; transition:all .3s ease;}
-.products.columns-4 li .content .title-wrapper .woocommerce-loop-product__title:hover{color:var(--wp--preset--color--title);}
-.products.columns-4 li .content .price{color:var(--wp--preset--color--title); font-size:14px;}
-.products.columns-4 li .content .show{opacity:0; background-color:#fff; position:absolute; font-size:0; bottom:0; left:0; border-radius:0; border-bottom:1px solid #cfcfcf; color:var(--wp--preset--color--title); transition:all .3s ease;}
-.products.columns-4 li .content .show.permalink{opacity:1; font-size:14px;}
-.products.columns-4 li .content .show.permalink:hover{color:var(--wp--preset--color--links);}
-.products.columns-4 li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist){position:absolute; top:0; right:0; transition:all .3s ease;}
-.products.columns-4 li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist) i{ color:var(--wp--preset--color--text); transition:all .3s ease;}
-.products.columns-4 li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist) i:hover{color:var(--wp--preset--color--title);}
+.products{padding-left:0; list-style:none; display:grid; gap:38px 24px; grid-template-columns:var(--grid-columns--loop--woo); padding-bottom:37px;}
+.products li{display:grid; gap:15px;}
+.products li a img{width:100%;}
+.products li .content{position:relative; padding-right:30px;}
+.products li .content *{margin:0; line-height:1.6;}
+.products li .content .title-wrapper .woocommerce-loop-product__title{color:var(--wp--preset--color--text); font-size:16px; transition:all .3s ease;}
+.products li .content .title-wrapper .woocommerce-loop-product__title:hover{color:var(--wp--preset--color--title);}
+.products li .content .price{color:var(--wp--preset--color--title); font-size:14px;}
+.products li .content .show{opacity:0; background-color:#fff; position:absolute; font-size:0; bottom:0; left:0; border-radius:0; border-bottom:1px solid #cfcfcf; color:var(--wp--preset--color--title); transition:all .3s ease;}
+.products li .content .show.permalink{opacity:1; font-size:14px;}
+.products li .content .show.permalink:hover{color:var(--wp--preset--color--links);}
+.products li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist){position:absolute; top:0; right:0; transition:all .3s ease;}
+.products li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist) i{ color:var(--wp--preset--color--text); transition:all .3s ease;}
+.products li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist) i:hover{color:var(--wp--preset--color--title);}
