--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ img{display:block; height:auto;}
             #wishlist-panel p.wishlist-empty, #wishlist-panel table.wishlist_table tbody td.wishlist-empty{grid-column:1/-1;}
 /* minicarrito */
 .widget_shopping_cart_content{display:grid; height:calc(100% - 15px); grid-template-rows:1fr auto;}
-.woocommerce-mini-cart{padding-left:0; list-style:none;}
+.woocommerce-mini-cart{padding-left:0; padding-top:40px; list-style:none;}
 .woocommerce-mini-cart li{position:relative; padding-left:86px; padding-right:20px; min-height:64px; display:grid; align-items:start;}
 .woocommerce-mini-cart li a.remove.remove_from_cart_button{position:absolute; top:0; right:0; color:#fff;}
 .woocommerce-mini-cart li:not(:last-child){margin-bottom:50px;}
