--- a/style.css
+++ b/style.css
@@ -180,3 +180,4 @@ img{display:block; height:auto;}
 .woocommerce-mini-cart li a img{width:64px; height:64px; object-fit:cover; border-radius:50%; position:absolute; top:0; left:0;}
 .woocommerce-mini-cart li .quantity{color:#777;}
 .widget_shopping_cart_content .woocommerce-mini-cart__buttons{display:grid;}
+.widget_shopping_cart_content .woocommerce-mini-cart__buttons .button.checkout.wc-forward{display:flex; align-items:center; justify-content:center; width:100%; height:44px; color:#fff; background-color:#111; margin-top:12px;}
